# MNN

./: .gitignore
demo/android/: .gitignore  build.gradle  settings.gradle
demo/android/app/: .gitignore  CMakeLists.txt  build.gradle
demo/android/app/src/main/: AndroidManifest.xml
demo/android/app/src/main/java/com/taobao/android/mnn/: MNNNetInstance.java  MNNNetNative.java
demo/android/app/src/main/java/com/taobao/android/mnndemo/: CameraView.java  ImageActivity.java  OpenGLTestActivity.java  PortraitActivity.java  RtspVideoActivity.java  VideoActivity.java
demo/android/app/src/main/jni/: AvcFileReader.cpp  AvcFileReader.h  MNNInterpreter.cpp  MNNInterpreter.h  Rtsp.cpp  Rtsp.h  RtspClient.cpp  mnnnetnative.cpp  mnnportraitnative.cpp
demo/android/app/src/main/res/layout/: activity_main.xml  activity_main_stub.xml  activity_portrait.xml  activity_rtsp_main.xml  activity_video.xml  opengl_test.xml
demo/android/app/src/main/res/values/: array.xml
demo/android/gradle/wrapper/: gradle-wrapper.properties
demo/android/uvccamera/: .gitignore
demo/android/uvccamera/src/main/cpp/: CMakeLists.txt  UVCPreview.cpp
